// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles fragments 1`] = `"import graphql__04a14acab651d6a481e1854c3ea62119 from \\"./__generated__/TestFrag.graphql\\";graphql__04a14acab651d6a481e1854c3ea62119"`;

exports[`handles mutations 1`] = `"import graphql__f200bd4d39b057cc1ea27cf15ac09c45 from \\"../../esbuild-plugin-relay/__generated__/CreateUser.graphql\\";graphql__f200bd4d39b057cc1ea27cf15ac09c45"`;

exports[`handles queries 1`] = `"import graphql__38ef13eedbb8b378195d1fb62b0cc0f8 from \\"../../../../src/__generated__/SomeQuery.graphql\\";graphql__38ef13eedbb8b378195d1fb62b0cc0f8"`;

exports[`handles subscriptions 1`] = `"import graphql__d8d1002aaba84d16f64726a48b9f9186 from \\"../../esbuild-plugin-relay/__generated__/FeedbackLikeSubscription.graphql\\";graphql__d8d1002aaba84d16f64726a48b9f9186"`;

exports[`with CommonJS modules handles inline tagged template literals 1`] = `
"
  function SomeComponent() {
    const _graphql = {};
    const graphql = {};
    const graphql_ = \\"graphql\\";

    return (
      <View>
        <QueryRenderer
          environment={RelayEnvironment}
          variables={{id: '12345'}}
          query={require(\\"../../../assets/graphql/AnotherQuery.graphql.js\\")}
        />
      </View>
    );
  }"
`;

exports[`with CommonJS modules handles multiple tagged template literals 1`] = `
"
  /**
   * Copyright (c) Example Inc.
   *
   * This source code is licensed under the MIT license found in the
   * LICENSE file in the root directory of this source tree.
   */

  'use strict';

  import { graphql } from \\"react-relay/hooks\\";

  const someQuery = require(\\"../../__graphql__/SomeQuery.graphql\\");

  const anotherQuery = require(\\"../../__graphql__/AnotherQuery.graphql\\");"
`;

exports[`with ESM modules handles fragments 1`] = `"import graphql__04a14acab651d6a481e1854c3ea62119 from \\"./__generated__/TestFrag.graphql\\";graphql__04a14acab651d6a481e1854c3ea62119"`;

exports[`with ESM modules handles inline tagged template literals 1`] = `
"import graphql__233c25d302b992557f1027c701830dc2 from \\"../../../assets/graphql/AnotherQuery.graphql.js\\";
  function SomeComponent() {
    const _graphql = {};
    const graphql = {};
    const graphql_ = \\"graphql\\";

    return (
      <View>
        <QueryRenderer
          environment={RelayEnvironment}
          variables={{id: '12345'}}
          query={graphql__233c25d302b992557f1027c701830dc2}
        />
      </View>
    );
  }"
`;

exports[`with ESM modules handles multiple tagged template literals 1`] = `
"import graphql__38ef13eedbb8b378195d1fb62b0cc0f8 from \\"../../__graphql__/SomeQuery.graphql\\";
import graphql__233c25d302b992557f1027c701830dc2 from \\"../../__graphql__/AnotherQuery.graphql\\";
  /**
   * Copyright (c) Example Inc.
   *
   * This source code is licensed under the MIT license found in the
   * LICENSE file in the root directory of this source tree.
   */

  'use strict';

  import { graphql } from \\"react-relay/hooks\\";

  const someQuery = graphql__38ef13eedbb8b378195d1fb62b0cc0f8;

  const anotherQuery = graphql__233c25d302b992557f1027c701830dc2;"
`;

exports[`with enabled development mode compares the hash in a CJS module 1`] = `
"
    /**
     * Copyright (c) Example Inc.
     *
     * This source code is licensed under the MIT license found in the
     * LICENSE file in the root directory of this source tree.
     */

    'use strict';

    const {graphql} = require('relay-runtime');

    const fragment = graphql__822d662bc36278d161dca334ce124360 !== void 0 ? graphql__822d662bc36278d161dca334ce124360 : (graphql__822d662bc36278d161dca334ce124360 = require(\\"./__generated__/AFragment.graphql\\"), graphql__822d662bc36278d161dca334ce124360.hash && graphql__822d662bc36278d161dca334ce124360.hash !== \\"822d662bc36278d161dca334ce124360\\" && console.error(\\"The definition of 'AFragment' appears to have changed. Run \`relay-compiler\` to update the generated files to receive the expected data.\\"), graphql__822d662bc36278d161dca334ce124360);
    "
`;

exports[`with enabled development mode compares the hash in a CJS module with a custom condition 1`] = `
"
      fetchQuery<AppQuery>(
        environment,
        graphql__a3db8e75d5824816aa490e38e7166572 !== void 0 ? graphql__a3db8e75d5824816aa490e38e7166572 : (graphql__a3db8e75d5824816aa490e38e7166572 = require(\\"../src/__generated__/AppQuery.graphql\\"), IS_DEV == true && graphql__a3db8e75d5824816aa490e38e7166572.hash && graphql__a3db8e75d5824816aa490e38e7166572.hash !== \\"a3db8e75d5824816aa490e38e7166572\\" && console.error(\\"The definition of 'AppQuery' appears to have changed. Run \`relay-compiler\` to update the generated files to receive the expected data.\\"), graphql__a3db8e75d5824816aa490e38e7166572),
        {id: 4},
      )
      .subscribe({
        start: console.log,
        complete: console.log,
        error: console.log,
        next: console.log
      });
    "
`;

exports[`with enabled development mode compares the hash in an ESM module 1`] = `
"import graphql__822d662bc36278d161dca334ce124360 from \\"./__generated__/AFragment.graphql\\";
    /**
     * Copyright (c) Example Inc.
     *
     * This source code is licensed under the MIT license found in the
     * LICENSE file in the root directory of this source tree.
     */

    'use strict';

    const {graphql} = require('relay-runtime');

    const fragment = (graphql__822d662bc36278d161dca334ce124360.hash && graphql__822d662bc36278d161dca334ce124360.hash !== \\"822d662bc36278d161dca334ce124360\\" && console.error(\\"The definition of 'AFragment' appears to have changed. Run \`relay-compiler\` to update the generated files to receive the expected data.\\"), graphql__822d662bc36278d161dca334ce124360);
    "
`;

exports[`with enabled development mode compares the hash in an ESM module with a custom condition 1`] = `
"import graphql__34616438bfbf51df7ec226af21d0b783 from \\"../../__generated__/Query.graphql\\";
  function Component() {
    useLazyQuery((process.env.NODE_ENV !== \\"production\\" && graphql__34616438bfbf51df7ec226af21d0b783.hash && graphql__34616438bfbf51df7ec226af21d0b783.hash !== \\"34616438bfbf51df7ec226af21d0b783\\" && console.error(\\"The definition of 'Query' appears to have changed. Run \`relay-compiler\` to update the generated files to receive the expected data.\\"), graphql__34616438bfbf51df7ec226af21d0b783));
  }
    "
`;
